minecraft-server/chart/templates/traefik-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minecraft-ingress-external
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`192.168.50.173`) && PathPrefix(`/minecraft`)
    kind: Rule
    services:
    - name: minecraft
      port: 25565

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minecraft-ingress-internal
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.localhost`) && PathPrefix(`/minecraft`)
    kind: Rule
    services:
    - name: minecraft
      port: 25565
